2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs,
	  MonoDevelop.Ide.Commands/TextEditorCommands.cs,
	  MonoDevelop.Ide.addin.xml: Implemented the "Show Parameter List"
	  command. Added some overridables to CompletionTextEditorExtension to
	  support it.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Fix warning.

2007-10-02  Ben Motmans <ben.motmans@gmail.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs: Disable the
	Delete command if the root combine is selected

2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Never insert
	  the namespace name of the class when completing a class from the
	  ctrl+space list. Fixes bug #328804.

2007-09-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs: Make sure
	  project features enabled by default are properly applied.
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Remove debug code.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp: Fix warning level.
	* MonoDevelop.Ide.Gui/Workbench.cs: Use the TextEditorProperties class to
	  get the Properties object for the editor. Save the properties just after
	  closing the options dialog.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* icons/Icons.AboutImage, icons/SplashScreen.png: New logo.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Bump MD version.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Revert last change, it's causing
	  a regression.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Always check HasChildNodes before
	  calling BuildChildNodes. Notice that extensions may add new nodes, even
	  if the original node builder returns HasChildNodes=false.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 
